--- a/about.html
+++ b/about.html
@@ -56,7 +56,8 @@
         </h2>
         
         <div class="about-info">
-            <img src="img/portrait.jpg" alt="Chad Heidesch" class="bio-image">
+            
+            <img src="img/itsme1.jpg" alt="Chad Heidesch" class="bio-image">
 
             <div class="bio">
                 <h3 class="text-secondary">BIO</h3>
